--- a/src/argos.html
+++ b/src/argos.html
@@ -7,5 +7,7 @@
   </head>
   <body>
     <h2>I am the argos guy</h2>
+    <h2>I am the argos guy</h2>
+    <h2>I am the argos guy</h2>
   </body>
 </html>
