Added all the other fikles

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <p>I am the argos guy.</p>
+    <h1>I am the homepage</h1>
   </body>
 </html>
